fix: gap app.header

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -23,7 +23,7 @@
   right: 0;
   top: 0;
   z-index: 100;
-  gap: var(--space-xxs);
+  gap: var(--space-xs);
 }
 
 .logo {
